--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,11 +255,11 @@ body {
 
     /* .Btn */
 .btn {
-    padding: 11px 20px;
+    padding: 15px 45px;
     max-width: 340px;
 
     display: inline-block;
-    vertical-align: top;
+    vertical-align: middle;
 
     cursor: pointer;
     border: none;
@@ -272,6 +272,7 @@ body {
     color: #fff;
     text-align: center;
     line-height: 1.1;
+    text-decoration: none;
 }
 
 .btn--block {
@@ -290,7 +291,13 @@ body {
     padding: 60px 0;
 }
 
+.section--map {
+    background: #fff url(../images/clients/map.svg) left 30px top 140px no-repeat;
+}
+
 .section__title {
+    margin-bottom: 40px;
+
     font-family: 'Lato', sans-serif;
     font-size: 45px;
     font-weight: 900;
@@ -401,6 +408,8 @@ body {
 
     /* .Clients */
 .clients {
+    margin-bottom: 60px;
+
     display: flex;
 }
 
@@ -410,4 +419,101 @@ body {
 
 .clients__reviews {
     width: 40%;
+}
+
+.clients__list {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.clients__list li {
+    margin-right: 40px;
+    margin-bottom: 40px;
+}
+
+.clients-love {
+    margin-left: 40px;
+    padding-top: 5px;
+    min-height: 47px;
+
+    display: inline-block;
+
+    background: url(../images/clients/heart.svg) left 20px top 0 no-repeat;
+
+    font-size: 18px;
+    color: #464646;
+}
+
+
+    /* .Reviews */
+.reviews {
+    position: relative;
+}
+
+.reviews:before {
+    content: "";
+    display: block;
+    width: 92px;
+    height: 126px;
+
+    background: url(../images/clients/lines.svg) no-repeat;
+
+    position: absolute;
+    top: -15px;
+    left: 2px;
+    z-index: 1;
+}
+
+.reviews__header {
+    margin-bottom: 30px;
+
+    display: flex;
+    align-items: center;
+
+    position: relative;
+    z-index: 2;
+}
+
+.reviews__photo {
+    width: 100px;
+    height: 100px;
+
+    border-radius: 50%;
+    border: 5px solid #fff;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, .16);
+}
+
+.reviews__header-content {
+    padding-left: 21px;
+
+    flex-grow: 1;
+}
+
+.reviews__name {
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: 900;
+    color: #2C2C2C;
+    line-height: 1.1;
+}
+
+.reviews__company {
+    font-family: 'Lato', sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    color: #2C2C2C;
+    line-height: 1.1;
+}
+
+.reviews__content {
+    font-size: 15px;
+    line-height: 1.8;
+    color: #585858;
+}
+
+.reviews__content p {
+    margin-bottom: 20px;
+
+    text-indent: 20px;
 }
