--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,12 @@ ul, ol {
     list-style: none;
 }
 
+.img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 body {
     margin: 0;
 
@@ -516,4 +522,77 @@ body {
     margin-bottom: 20px;
 
     text-indent: 20px;
+}
+
+
+
+    /* .Benefits */
+.benefits {
+    display: flex;
+}
+
+.benefits__col {
+    width: 50%;
+}
+
+.benefits-list {
+    padding-left: 50px;
+
+    width: 100%;
+    max-width: 370px;
+
+    background-image: linear-gradient(to bottom, #fff 40%, #A5A5A5 40%);
+    background-size: 2px 35px;
+    background-repeat: repeat-y;
+    background-position: left 12px top;
+
+    position: relative;
+}
+
+.benefits-list:before, 
+.benefits-list:after {
+    width: 26px;
+    height: 36px;
+    
+    content: "";
+    display: block;
+    position: absolute;
+    left: 0;
+    z-index: 1;
+
+    background-repeat: no-repeat;
+    background-color: #fff;
+}
+
+.benefits-list:before {
+    background: url(../images/benefits/pin-start.svg);
+
+    top: -25px;
+}
+
+.benefits-list:after {
+    background: url(../images/benefits/pin-end.svg);
+    background-color: #fff;
+
+    bottom: -20px;
+}
+
+.benefits-list__item:not(:last-child) {
+    margin-bottom: 35px;
+}
+
+.benefits-list__title {
+    margin-bottom: 10px;
+
+    font-family: 'Lato', sans-serif;
+    font-size: 21px;
+    color: #2C2C2C;
+    font-weight: 900;
+    line-height: 1.2;
+}
+
+.benefits-list__text {
+    font-size: 15px;
+    color: #585858;
+    line-height: 1.4;
 }
