Add section Mission

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,10 @@ ul, ol {
     height: auto;
 }
 
+.block-center {
+    text-align: center;
+}
+
 body {
     margin: 0;
 
@@ -662,4 +666,70 @@ body {
 
 .team__contacts a:hover {
     text-decoration: underline;
+}
+
+
+     /* .Mission */
+.mission-title {
+    margin-bottom: -25px;
+
+    font-family: 'Lato', sans-serif;
+    font-size: 90px;
+    font-weight: 900;
+    line-height: 1;
+    text-transform: uppercase;
+    text-align: center;
+    color: rgba(0, 0, 0, .05);
+}
+
+.mission {
+    padding: 60px 30px;
+    margin-bottom: 30px;
+
+    background-color: #fff;
+    background-repeat: 5px;
+    box-shadow: 0 5px 30px rgba(0, 0, 0, .16);
+
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    line-height: 1.1;
+
+    position: relative;
+}
+
+.mission:before,
+.mission:after {
+    content: '';
+    display: block;
+    
+    width: 41.66666%;
+    height: 2px;
+
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+}
+
+.mission:before {
+    background-color: #004AF2;
+    right: 50%;
+}
+
+.mission:after {
+    background-color: #FC2C2B;
+    left: 50%;
+}
+
+.mission__title {
+    margin-bottom: 7px;
+
+    font-size: 30px;
+    font-weight: 700;
+    color: #004AF2;
+}
+
+.mission__subtitle {
+    font-size: 21px;
+    font-weight: 400;
+    color: #585858;
 }
