--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,7 @@ body {
     border: none;
     border-radius: 5px;
     background-color: #e8e8e8;
+    overflow: hidden;
 
     font-family: 'PT Sans', sans-serif;
     font-size: 18px;
@@ -283,6 +284,30 @@ body {
     text-align: center;
     line-height: 1.1;
     text-decoration: none;
+
+    position: relative;
+}
+
+.btn span {
+    position: relative;
+    z-index: 2;
+}
+
+.btn:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+
+    background-color: #000;
+    opacity: 0;
+    
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    transition: opacity .2s linear;
 }
 
 .btn--block {
@@ -292,6 +317,15 @@ body {
 
 .btn--orange {
     background-image: linear-gradient(to right, #FF903E, #FF2C2C);
+}
+
+
+.btn--shadow {
+    box-shadow: 0 10px 15px rgba(0, 0, 0, .2);
+}
+
+.btn:hover:before {
+    opacity: .2;
 }
 
 
@@ -732,4 +766,54 @@ body {
     font-size: 21px;
     font-weight: 400;
     color: #585858;
+}
+
+
+     /* .News */
+.news {
+    margin-bottom: 30px;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.news__item {
+    margin-bottom: 25px;
+    width: 100%;
+    max-width: 500px;
+}
+
+.news__title {
+    margin-bottom: 15px;
+
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #2C2C2C;
+}
+
+.news__title a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.news__title a:hover {
+    text-decoration: underline;
+}
+
+.news__text {
+    margin-bottom: 15px;
+
+    font-size: 15px;
+    font-weight: 400;
+    color: #585858;
+}
+
+.news__date {
+    display: block;
+
+    font-size: 12px;
+    font-weight: 400;
+    color: #6E6E6E;
 }
