--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -817,3 +817,76 @@ body {
     font-weight: 400;
     color: #6E6E6E;
 }
+
+
+    /* .Footer */
+.footer {
+    padding: 40px 0;
+    margin-top: 60px;
+    
+    background-color: #F9F9F9;
+    background-image: 
+        url(../images/footer/tire-track-left.svg),
+        url(../images/footer/tire-track-right.svg);
+    background-repeat: no-repeat;
+    background-position: 
+        left -50px bottom 10px, 
+        right -50px bottom 10px;
+    text-align: center;
+}
+
+.footer__logo {
+    margin-bottom: 30px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer__logo-img {
+    margin-right: 15px;
+}
+
+.footer__title {
+    font-size: 15px;
+    font-weight: 700;
+    color: #2C2C2C;
+}
+
+.footer__contacts {
+    margin-bottom: 25px;
+
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #585858;
+}
+
+.footer__contacts p {
+    margin: 0 0 5px;
+}
+
+.footer__contacts a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer__contacts a:hover {
+    text-decoration: underline;
+}
+
+.footer__nav {
+    font-size: 12px;
+}
+
+.footer__nav a {
+    margin: 0 5px;
+
+    color: #004AF2;
+    text-decoration: none;
+}
+
+.footer__nav a:hover {
+    text-decoration: underline;
+}
