--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,10 @@ body {
     color: #585858;
 }
 
+body.no-scroll {
+    overflow: hidden;
+}
+
     /* .Container */
 .container {
     margin: 0 auto;
@@ -237,6 +241,7 @@ body {
 
     font-family: 'PT Sans', sans-serif;
     font-size: 16px; 
+    color: #fff;
 
     transition: border-color .2s linear;
 }
@@ -260,6 +265,32 @@ body {
 
 .input--email {
     background: url(../images/form/e-mail.svg) left 15px top 5px no-repeat;
+}
+
+.input--dark {
+    border-bottom-color: #E8E8E8;
+
+    color: #2C2C2C;
+}
+
+.input--dark.input--user {
+    background-image: url(../images/modals/person-dark.svg);
+}
+
+.input--dark.input--call {
+    background-image: url(../images/team/call.svg);
+}
+
+.input--dark.input--email {
+    background-image: url(../images/team/e-mail.svg);
+}
+
+.input--dark::placeholder {
+    color: #2C2C2C;
+}
+
+.input--dark:focus {
+    border-bottom-color: #000;
 }
 
 
@@ -889,4 +920,125 @@ body {
 
 .footer__nav a:hover {
     text-decoration: underline;
+}
+
+
+
+    /* .Modal */
+.modal {
+    width: 100%;
+    height: 100%;
+
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2000;
+
+    background-color: rgba(0, 0, 0, .8);
+}
+
+.modal.show {
+    display: flex;
+}
+
+.modal__inner {
+    padding: 25px;
+    width: 400px;
+
+    background-color: #fff;
+
+    position: relative;  /* for position button Close-modal */
+}
+
+.modal__header {
+    margin-bottom: 25px;
+
+    text-align: center;
+}
+
+.modal-icon {
+    margin-bottom: 10px;
+}
+
+.modal__title {
+    margin-bottom: 10px;
+
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 1.2;
+    color: #004AF2;
+}
+
+.modal__text {
+    font-size: 15px;
+    font-weight: 400;
+    color: #2C2C2C;
+}
+
+.modal__footer {
+    margin-top: 25px;
+    padding-top: 25px;
+
+    border-top: 1px solid #E8E8E8;
+
+    text-align: center;
+}
+
+.modal__footer-title {
+    margin-bottom: 10px;
+
+    font-family: 'Lato', sans-serif;
+    font-size: 18px;
+    font-weight: 900;
+    color: #2C2C2C;
+}
+
+.modal__contacts {
+    font-size: 15px;
+    font-style: normal;
+    color: #2C2C2C;
+}
+
+.modal__contacts p {
+    margin-bottom: 3px;
+}
+
+.modal__contacts a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.modal__contacts a:hover {
+    text-decoration: underline;
+}
+
+.modal__close {
+    padding: 0;
+    width: 20px;
+    height: 20px;
+
+    background: none;
+    border: none;
+    cursor: pointer;
+
+    position: absolute;
+    top: -20px;
+    right: -30px;
+    z-index: 1;
+
+    transition: transform .2s linear;
+}
+
+.modal__close img {
+    display: block;
+}
+
+.modal__close:hover {
+    transform: rotate(90deg);
 }
