--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,14 @@ body.no-scroll {
     overflow: hidden;
 }
 
+    /* .Page */
+.page {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+
     /* .Container */
 .container {
     margin: 0 auto;
@@ -158,6 +166,12 @@ body.no-scroll {
 .intro--blog {
     height: 350px;
     background: #000 url('../images/intro/news-intro.jpg') no-repeat center;
+    background-size: cover;
+}
+
+.intro--text {
+    height: 350px;
+    background: url('../images/intro/text-intro.jpg') no-repeat center;
     background-size: cover;
 }
 
@@ -400,6 +414,10 @@ body.no-scroll {
 
 .section--gray {
     background-color: #F9F9F9;
+}
+
+.section--last {
+    margin-bottom: 60px;
 }
 
 .section__title {
@@ -891,7 +909,7 @@ body.no-scroll {
     /* .Footer */
 .footer {
     padding: 40px 0;
-    margin-top: 60px;
+    margin-top: auto;
     
     background-color: #F9F9F9;
     background-image: 
@@ -1090,4 +1108,86 @@ body.no-scroll {
 
 .main__col {
     width: 50%;
+}
+
+    /* .Text */
+.text {
+    margin-bottom: 50px;
+    max-width: 890px;
+
+    font-size: 18px;
+    color: #585858;
+    line-height: 1.5;
+}
+
+.text p {
+    margin-bottom: 20px;
+}
+
+.text h2,
+.text h3,
+.text h4,
+.text h5,
+.text h6 {
+    margin-bottom: 20px;
+
+    font-weight: 700;
+    color: #2C2C2C;
+}
+
+.text h2 {
+    font-size: 27px;
+}
+
+.text h3 {
+    font-size: 24px;
+}
+
+.text h4 {
+    font-size: 21px;
+}
+
+.text h5 {
+    font-size: 18px;
+}
+
+.text h6 {
+    font-size: 15px;
+}
+
+.text ul,
+.text ol {
+    margin-bottom: 20px;
+}
+
+.text ol {
+    list-style: decimal;
+    list-style-position: inside;
+}
+
+.text hr {
+    margin: 40px 0;
+    width: 100%;
+    height: 1px;
+    
+    display: block;
+
+    border: 0;
+    background-color: #d1d1d1;
+}
+
+.text img {
+    max-width: 100%;
+    height: auto;
+    
+    display: block; 
+}
+
+.text a {
+    text-decoration: none;
+    color: #0D53F2;
+}
+
+.text a:hover {
+    text-decoration: underline;
 }
