--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,9 +39,11 @@ body {
     background-color: #fff;
 
     font-family: 'PT Sans', sans-serif;
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.5;
     color: #585858;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body.no-scroll {
@@ -80,7 +82,7 @@ body.no-scroll {
 }
 
 .header--dark {
-    background-color: rgba(0, 0, 0, .8);
+    background-color: rgba(0, 0, 0, .9);
 }
 
 .header__inner {
@@ -93,6 +95,9 @@ body.no-scroll {
 
 .header__item {
     height: 100%;
+
+    display: flex;
+    justify-content: space-between;
 }
 
 .header__item__logo {
@@ -151,6 +156,16 @@ body.no-scroll {
 
 .nav__link.active:hover {
     text-decoration: none;
+}
+
+    /* .Burger */
+
+.burger {
+    padding: 0;
+    background: none;
+    border: 0;
+
+    display: none;
 }
 
 
@@ -255,7 +270,7 @@ body.no-scroll {
 }
 
 .request-form__text {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.4;
 }
 
@@ -625,14 +640,14 @@ body.no-scroll {
 
 .reviews__company {
     font-family: 'Lato', sans-serif;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 400;
     color: #2C2C2C;
     line-height: 1.1;
 }
 
 .reviews__content {
-    font-size: 15px;
+    font-size: 16px;
     line-height: 1.8;
     color: #585858;
 }
@@ -711,7 +726,7 @@ body.no-scroll {
 }
 
 .benefits-list__text {
-    font-size: 15px;
+    font-size: 16px;
     color: #585858;
     line-height: 1.4;
 }
@@ -750,7 +765,7 @@ body.no-scroll {
 .team__prof {
     margin-bottom: 11px;
 
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 1.2;
     color: #585858;
@@ -848,10 +863,9 @@ body.no-scroll {
 
      /* .News */
 .news {
-    margin-bottom: 30px;
+    margin: 0 -15px 30px;
 
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
 }
 
@@ -866,6 +880,7 @@ body.no-scroll {
 }
 
 .news__item {
+    padding: 0 15px;
     margin-bottom: 25px;
     width: 100%;
     max-width: 500px;
@@ -892,7 +907,7 @@ body.no-scroll {
 .news__text {
     margin-bottom: 15px;
 
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 400;
     color: #585858;
 }
@@ -935,7 +950,7 @@ body.no-scroll {
 }
 
 .footer__title {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 700;
     color: #2C2C2C;
 }
@@ -982,6 +997,7 @@ body.no-scroll {
 
     /* .Modal */
 .modal {
+    padding: 15px;
     width: 100%;
     height: 100%;
 
@@ -989,6 +1005,7 @@ body.no-scroll {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: auto;
 
     position: fixed;
     top: 0;
@@ -1003,8 +1020,10 @@ body.no-scroll {
 }
 
 .modal__inner {
+    margin-top: 50px;
     padding: 25px;
-    width: 400px;
+    width: 100%;
+    max-width: 400px;
 
     background-color: #fff;
 
@@ -1032,7 +1051,7 @@ body.no-scroll {
 }
 
 .modal__text {
-    font-size: 15px;
+    font-size: 16px;
     font-weight: 400;
     color: #2C2C2C;
 }
@@ -1056,7 +1075,7 @@ body.no-scroll {
 }
 
 .modal__contacts {
-    font-size: 15px;
+    font-size: 16px;
     font-style: normal;
     color: #2C2C2C;
 }
@@ -1152,7 +1171,7 @@ body.no-scroll {
 }
 
 .text h6 {
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .text ul,
@@ -1190,4 +1209,341 @@ body.no-scroll {
 
 .text a:hover {
     text-decoration: underline;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    /* Media */
+
+@media (max-width: 991px) {
+
+    /* Intro */
+    .intro__title {
+        font-size: 90px;
+    }
+
+    .intro__title-amp {
+        right: auto;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0);
+
+        font-size: 120px;
+    }
+   
+    /* Section */
+    .section--map {
+        background-position: center top 130px;
+    }
+    
+    .section__title {
+        text-align: center;
+    }
+    
+    /* Services */
+    .services__item {
+        width: 50%;
+    }
+
+    /* Clients */
+    .clients {
+        margin-bottom: 30px;
+
+        flex-direction: column;
+    }
+
+    .clients__logos,
+    .clients__reviews {
+        width: 100%;
+    }
+
+    .clients__logos {
+        margin-bottom: 50px;
+    }
+
+    .clients__list {
+        justify-content: center;
+    }
+
+    .clients__list li {
+        max-width: 130px;
+    }
+
+    /* Footer */
+    .footer {
+        background-size: 300px auto;
+    }
+
+}
+
+@media (max-width: 767px) {
+   
+    /* Header */
+    .header__inner {
+        height: 50px;
+    }    
+    
+    /* Nav */
+    .nav {
+        padding-top: 9px;
+        width: 100%;
+        height: auto;
+        min-height: calc(100vh - 50px);
+
+        display: none;
+        flex-direction: column;
+
+        background-color: rgba(0, 0, 0, .85);
+
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    .nav__link {
+        padding: 10px 15px;
+        
+        display: block;
+
+        text-align: right;
+    }
+
+    .burger {
+        display: block;
+    }
+
+
+    /* Intro */
+    .intro {
+        margin-bottom: 0;
+    }
+
+    .intro__inner {
+        padding-top: 75px;
+        padding-bottom: 25px;
+        height: auto;
+
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .intro__text {
+        margin-top: 30px;
+        margin-bottom: 25px;
+        width: 100%;
+
+        order: 1;
+
+        text-align: center;
+    }
+
+    .intro__title {
+        padding-bottom: 10px;
+        font-size: 70px;
+    }
+
+    .intro__title-amp {
+        font-size: 100px;
+    }
+
+
+    /* Benefits */
+    .benefits {
+        margin: 0 auto;
+        max-width: 600px;
+
+        flex-direction: column;
+    }
+
+    .benefits__col {
+        width: 100%;
+    }
+
+    .benefits-list {
+        margin-bottom: 30px;
+        max-width: none;
+    }
+
+    /* Team */
+    .team {
+        flex-direction: column;
+    }
+
+    .team__col {
+        width: 100%;
+    }
+
+    .team__col:last-child {
+        margin-bottom: 0;
+    }
+
+    .team__item {
+        margin: 0 auto;
+        max-width: 370px;
+    }
+
+    /* Mission */
+    .mission-title {
+        font-size: 70px;
+    }
+
+    .mission {
+        margin-top: -16px;
+        padding: 40px 20px;
+    }
+
+    .mission__title {
+        font-size: 24px;
+    }
+
+    .mission__subtitle {
+        font-size: 18px;
+    }
+
+    /* News */
+    .news {
+        flex-wrap: wrap;
+    }
+
+    .news__item {
+        max-width: none;
+    }
+
+    /* Footer */
+    .footer {
+        background-size: 250px auto;
+        background-position: left -50px bottom 50px, right -50px bottom 50px;
+    }
+
+    /* Request form */
+    .request-form--intro {
+        margin-bottom: 0; 
+        
+        order: 2;
+    }
+}
+
+
+@media (max-width: 575px) {
+    .intro__title {
+        font-size: 60px;
+    }
+
+    .intro__title-amp {
+        right: auto;
+        left: 50%;
+        transform: translate3d(-50%, -50%, 0);
+
+        font-size: 90px;
+    }
+
+    /* Section */
+    .section {
+        padding: 30px 0;
+    }
+
+    .section--last {
+        margin-bottom: 30px;
+    }
+
+    .section__title {
+        font-size: 35px;
+    }
+
+    /* Services */
+    .services__item {
+        width: 100%;
+    }
+
+    .services__main-title {
+        font-size: 60px;
+    }
+
+    /* Clients */
+    .clients__list {
+        margin: 0 -15px;
+    }
+
+    .clients__list li {
+        margin-right: 0;
+        padding: 0 15px;
+        max-width: none;
+        width: 33.33333%;
+    }
+
+    .clients__list-logo {
+        margin: 0 auto;
+    }
+
+    /* Mission */
+    .mission-title {
+        font-size: 40px;
+    }
+
+    .mission {
+        margin-top: -10px;
+        padding: 30px 20px;
+    }
+
+    .mission__title {
+        font-size: 20px;
+    }
+
+    .mission__subtitle {
+        font-size: 16px;
+    }
+
+    /* Main */
+    .main {
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+    }
+
+    .main__col {
+        width: 100%;
+    }
+
+    .main__col:last-child {
+        margin-bottom: 50px;    
+    }
+
+    /* Footer */
+    .footer {
+        background-size: 200px auto;
+    }
+    
+    /* Request modals */
+    .request-form__header,
+    .request-form__content {
+        padding: 20px;
+    }
+
+    .request-form__title {
+        font-size: 25px;
+    }
+
+    .modal__inner {
+        padding: 15px;
+    }
+
+    .modal__close {
+        right: 0;
+        top: -30px;
+    }
+
 }
